--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Réservation Médecin</title>
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="./static/styles.css">
 </head>
 <body>
     <div class="conteneur-principal">
@@ -106,6 +106,6 @@
         </footer>
     </div>
 
-    <script src="../static/script.js"></script>
+    <script src="./static/script.js"></script>
 </body>
 </html>
