--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Réservation Médecin</title>
-    <link rel="stylesheet" href="./static/styles.css">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
     <div class="conteneur-principal">
@@ -17,7 +17,7 @@
                     <a href="#">Contact</a>
                 </div>
                 <div class="connexion">
-                    <button class="bouton-connexion">Connexion</button>
+                    <a href="./templates/connexion.html"><button class="bouton-connexion">Connexion</button></a>
                 </div>
             </div>
         </header>
@@ -30,7 +30,7 @@
                     <button class="bouton-principal">Prendre rendez-vous</button>
                 </div>
                 <div class="image-hero">
-                    <img src="hero-image.png" alt="Médecin">
+                    <img src="./static/images/medecin.png" alt="Médecin">
                 </div>
             </section>
 
@@ -53,27 +53,27 @@
                 <h2>Spécialités médicales</h2>
                 <div class="liste-specialites">
                     <div class="carte-specialite">
-                        <img src="generaliste.png" alt="Médecin généraliste">
+                        <img src="./static/images/generaliste.png" alt="Médecin généraliste">
                         <h3>Généraliste</h3>
                     </div>
                     <div class="carte-specialite">
-                        <img src="dentiste.png" alt="Dentiste">
+                        <img src="./static/images/dentiste.png" alt="Dentiste">
                         <h3>Dentiste</h3>
                     </div>
                     <div class="carte-specialite">
-                        <img src="pediatre.png" alt="Pédiatre">
+                        <img src="./static/images/pediatre.png" alt="Pédiatre">
                         <h3>Pédiatre</h3>
                     </div>
                     <div class="carte-specialite">
-                        <img src="cardiologue.png" alt="Cardiologue">
+                        <img src="./static/images/cardiologue.png" alt="Cardiologue">
                         <h3>Cardiologue</h3>
                     </div>
                     <div class="carte-specialite">
-                        <img src="dermatologue.png" alt="Dermatologue">
+                        <img src="./static/images/dermatologue.png" alt="Dermatologue">
                         <h3>Dermatologue</h3>
                     </div>
                     <div class="carte-specialite">
-                        <img src="plus.png" alt="Plus de spécialités">
+                        <img src="./static/images/plus.png" alt="Plus de spécialités">
                         <h3>Plus</h3>
                     </div>
                 </div>
