--- a/index.html
+++ b/index.html
@@ -2,108 +2,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Réservation Médecin</title>
-    <link rel="stylesheet" href="../static/styles.css">
+    <title>Plateforme Médicale</title>
+    <link rel="stylesheet" href="./static/styles.css">
+    
 </head>
 <body>
-    <div class="conteneur-principal">
-        <header>
-            <div class="barre-navigation">
-
-                <div class="menu">
-                    <a href="#" class="actif">Accueil</a>
-                    <a href="#">Services</a>
-                    <a href="#">À propos</a>
-                    <a href="#">Contact</a>
-                </div>
-                <div class="connexion">
-                    <a href="./templates/connexion.html"><button class="bouton-connexion">Connexion</button></a>
-                </div>
+    <header>
+        <nav>
+            <div class="nav-links">
+                <a href="./index.html" class="active">Accueil</a>
+                <a href="./templates/medecin.html">Médecins</a>
+                <a href="./templates/rdv.html">Mes rendez-vous</a>
+                <a href="#">Profil</a>
             </div>
-        </header>
+        </nav>
+    </header>
 
-        <main>
-            <section class="hero">
-                <div class="texte-hero">
-                    <h1>Prenez rendez-vous avec votre médecin en ligne</h1>
-                    <p>Simplifiez votre vie en réservant votre consultation médical en quelques clics</p>
-                    <button class="bouton-principal">Prendre rendez-vous</button>
-                </div>
-                <div class="image-hero">
-                    <img src="./static/images/medecin.png" alt="Médecin">
-                </div>
-            </section>
-
-            <section class="recherche-medecin">
-                <h2>Trouvez un médecin près de chez vous</h2>
-                <div class="formulaire-recherche">
-                    <div class="champ-recherche">
-                        <i class="fas fa-search"></i>
-                        <input type="text" placeholder="Spécialité ou nom du médecin">
-                    </div>
-                    <div class="champ-recherche">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <input type="text" placeholder="Ville ou code postal">
-                    </div>
-                    <button class="bouton-recherche">Rechercher</button>
-                </div>
-            </section>
-
-            <section class="specialites">
-                <h2>Spécialités médicales</h2>
-                <div class="liste-specialites">
-                    <div class="carte-specialite">
-                        <img src="./static/images/generaliste.png" alt="Médecin généraliste">
-                        <h3>Généraliste</h3>
-                    </div>
-                    <div class="carte-specialite">
-                        <img src="./static/images/dentiste.png" alt="Dentiste">
-                        <h3>Dentiste</h3>
-                    </div>
-                    <div class="carte-specialite">
-                        <img src="./static/images/pediatre.png" alt="Pédiatre">
-                        <h3>Pédiatre</h3>
-                    </div>
-                    <div class="carte-specialite">
-                        <img src="./static/images/cardiologue.png" alt="Cardiologue">
-                        <h3>Cardiologue</h3>
-                    </div>
-                    <div class="carte-specialite">
-                        <img src="./static/images/dermatologue.png" alt="Dermatologue">
-                        <h3>Dermatologue</h3>
-                    </div>
-                    <div class="carte-specialite">
-                        <img src="./static/images/plus.png" alt="Plus de spécialités">
-                        <h3>Plus</h3>
-                    </div>
-                </div>
-            </section>
-
-            <section class="fonctionnement">
-                <h2>Comment ça fonctionne</h2>
-                <div class="etapes">
-                    <div class="etape">
-                        <div class="cercle">1</div>
-                        <h3>Recherchez</h3>
-                        <p>Trouvez un médecin par spécialité ou localisation</p>
-                    </div>
-                    <div class="etape">
-                        <div class="cercle">2</div>
-                        <h3>Choisissez</h3>
-                        <p>Sélectionnez une date et heure disponible</p>
-                    </div>
-                    <div class="etape">
-                        <div class="cercle">3</div>
-                        <h3>Réservez</h3>
-                        <p>Confirmez votre rendez-vous en quelques clics</p>
-                    </div>
-                </div>
-            </section>
-
-            <div class="copyright">
-                <p>&copy; 2023 Réservation Médecin. Tous droits réservés.</p>
+    <main>
+        <h1>Médecins disponibles</h1>
+        
+        <div class="search-container">
+            <input type="text" id="search-input" placeholder="Rechercher un médecin...">
+            <div class="filter-buttons">
+                <button id="all-specialties">Toutes les spécialités</button>
+                <button id="all-categories">Toutes les catégories</button>
             </div>
-        </footer>
+        </div>
+
+        <div class="doctors-list" id="doctors-list">
+            <!-- Les médecins seront générés par JavaScript -->
+        </div>
+    </main>
+
+    <div id="filters-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <h2>Filtrer par spécialité</h2>
+            <div class="specialties-list">
+                <!-- Les spécialités seront générées par JavaScript -->
+            </div>
+            <div class="modal-actions">
+                <button id="apply-filters">Appliquer</button>
+                <button id="reset-filters">Réinitialiser</button>
+            </div>
+        </div>
     </div>
 
     <script src="./static/script.js"></script>
