Mise à jour de la plateforme médicale

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="./index.html" class="active">Accueil</a>
                 <a href="./templates/medecin.html">Médecins</a>
                 <a href="./templates/rdv.html">Mes rendez-vous</a>
-                <a href="#">Profil</a>
+                <a href="./templates/profil.html">Profil</a>
             </div>
         </nav>
     </header>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="doctors-list" id="doctors-list">
-            <!-- Les médecins seront générés par JavaScript -->
+            <!-- Les médecins seront générés par JavaScript  du fate de ne pas encore eu de base de donne-->
         </div>
     </main>
 
@@ -39,7 +39,7 @@
             <span class="close-modal">&times;</span>
             <h2>Filtrer par spécialité</h2>
             <div class="specialties-list">
-                <!-- Les spécialités seront générées par JavaScript -->
+                <!-- Les spécialités seront générées par JavaScript du fate de ne pas encore eu de base de donne-->
             </div>
             <div class="modal-actions">
                 <button id="apply-filters">Appliquer</button>
