--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>principal</title>
-    <link rel="stylesheet" href="./static/styles.css">
+    <title>Principal</title>
     <link rel="stylesheet" href="./static/styles_index.css">
     <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/js/all.min.js"></script> 
-    <!-- //script pour l utilisation des icones des cartes a ne pas supprimer  -->
+    <!-- //script pour l'utilisation des icônes des cartes à ne pas supprimer  -->
    
 
 </head>
@@ -23,9 +22,9 @@
             </div>
 
             <div class="auth-buttons" style="display: flex; gap: 20px; margin-top: 20px;">
-                            <a href="./templates/connexion.html" class="login-btn" style="padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">Se connecter</a>
-                            <a href="./templates/inscription.html" class="register-btn" style="padding: 10px 20px; background-color: #2196F3; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">S'inscrire</a>
-                        </div>            
+                <a href="./templates/connexion.html" class="login-btn" style="padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">Se connecter</a>
+                <a href="./templates/inscription.html" class="register-btn" style="padding: 10px 20px; background-color: #2196F3; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">S'inscrire</a>
+            </div>            
         </nav>
     </header>
 
