retouche de la nav espace et icone couleurs et tailles

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principal</title>
     <link rel="stylesheet" href="./static/styles_index.css">
-    <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/js/all.min.js"></script> 
-    <!-- //script pour l'utilisation des icônes des cartes à ne pas supprimer  -->
-</head>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- //script pour l'utilisation des icônes des cartes à ne pas supprimer  --></head>
 <body>
     <header>
         <nav>
