modification sur le style de medecins et et acceuil

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h1>Bienvenue </h1>
-                <p class="subtitle">Votre santé simplifiée : prenez rendez-vous en ligne avec vos professionnels de santé</p>
+                <p class="subtitle">Votre santé simplifiée : prenez rendez-vous en ligne avec vos professionnels de la santé</p>
                 <div class="hero-buttons">
                     <button class="primary-btn">
                         <i class="fas fa-user-md"></i>
@@ -75,7 +75,7 @@
 
                 <!-- Espace Praticien -->
                 <div class="feature-section">
-                    <h3><i class="fas fa-user-md"></i> Pour les professionnels</h3>
+                    <h3><i class="fas fa-user-md"></i> Pour les Medecins</h3>
                     <div class="feature-cards">
                         <div class="feature-card">
                             <i class="fas fa-calendar-check"></i>
