--- a/index.html
+++ b/index.html
@@ -3,99 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Principal</title>
+    <title>Accueil - Plateforme de Santé</title>
     <link rel="stylesheet" href="./static/styles_index.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- //script pour l'utilisation des icônes des cartes à ne pas supprimer  --></head>
+</head>
 <body>
-    <header>
-        <nav>
-            <div class="nav-links">
-                <a href="./templates/acceuil.html" class="active">Accueil</a>
-                <a href="./templates/medecin.html">Médecins</a>
-                <a href="./templates/acceuil.html">Mes rendez-vous</a>
-                <a href="./templates/profil.html">Profil</a>
+<header>
+    <nav>
+        <div class="nav-links">
+            <a href="./templates/accueil.html" class="active">Accueil</a>
+            <a href="./templates/medecin.html">Médecins</a>
+            <a href="./templates/rendez-vous.html">Mes rendez-vous</a>
+            <a href="./templates/profil.html">Profil</a>
+        </div>
+
+        <div class="auth-buttons">
+            <a href="./templates/connexion.html" class="login-btn">Se connecter</a>
+            <a href="./templates/inscription.html" class="register-btn">S'inscrire</a>
+        </div>            
+    </nav>
+</header>
+
+<main class="home-container">
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Bienvenue sur notre plateforme de santé</h1>
+            <p class="subtitle">Votre santé simplifiée : prenez rendez-vous en ligne avec vos professionnels de la santé</p>
+            <div class="hero-buttons">
+                <a href="./templates/espace-professionnel.html" class="primary-btn">
+                    <i class="fas fa-user-md"></i>
+                    Espace professionnel de santé
+                </a>
+                <a href="./templates/connexion.html" class="secondary-btn">
+                    <i class="fas fa-user"></i>
+                    Espace patient
+                </a>
             </div>
+        </div>
+    </section>
 
-            <div class="auth-buttons" style="display: flex; gap: 20px; margin-top: 20px;">
-                <a href="./templates/connexion.html" class="login-btn" style="padding: 10px 20px; background-color: #2196F3; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">Se connecter</a>
-                <a href="./templates/inscription.html" class="register-btn" style="padding: 10px 20px; background-color: #2196F3; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">S'inscrire</a>
-            </div>            
-        </nav>
-    </header>
-
-    <main class="home-container">
-        <!-- Section d'en-tête -->
-        <section class="hero">
-            <div class="hero-content">
-                <h1>Bienvenue </h1>
-                <p class="subtitle">Votre santé simplifiée : prenez rendez-vous en ligne avec vos professionnels de la santé</p>
-                <div class="hero-buttons">
-                    <button class="primary-btn">
-                        <i class="fas fa-user-md"></i>
-                        Espace professionnel de santé
-                    </button>
-                    <a href="./templates/connexion.html">
-                        <button class="secondary-btn">
-                            <i class="fas fa-user"></i>
-                            Espace patient
-                        </button>
-                    </a>
-                </div>
-            </div>
-        </section>
-
-        <!-- Section des fonctionnalités -->
-        <section class="features">
-            <h2>Une solution complète pour votre santé</h2>
-            
-            <div class="features-grid">
-                <!-- Espace Patient -->
-                <div class="feature-section">
-                    <h3><i class="fas fa-user"></i> Pour les patients</h3>
-                    <div class="feature-cards">
-                        <div class="feature-card">
-                            <i class="fas fa-search-plus"></i>
-                            <h4>Recherche simplifiée</h4>
-                            <p>Trouvez rapidement le bon professionnel de santé près de chez vous</p>
-                        </div>
-                        <div class="feature-card">
-                            <i class="far fa-calendar-alt"></i>
-                            <h4>Rendez-vous en ligne</h4>
-                            <p>Prenez rendez-vous 24h/24 et recevez des rappels automatiques</p>
-                        </div>
-                        <div class="feature-card">
-                            <i class="fas fa-file-medical"></i>
-                            <h4>Suivi médical</h4>
-                            <p>Accédez à votre historique et vos documents médicaux en toute sécurité</p>
-                        </div>
+    <section class="features">
+        <h2>Une solution complète pour votre santé</h2>
+        
+        <div class="features-grid">
+            <div class="feature-section">
+                <h3><i class="fas fa-user"></i> Pour les patients</h3>
+                <div class="feature-cards">
+                    <div class="feature-card">
+                        <i class="fas fa-search-plus"></i>
+                        <h4>Recherche simplifiée</h4>
+                        <p>Trouvez rapidement le bon professionnel de santé près de chez vous</p>
                     </div>
-                </div>
-
-                <!-- Espace Praticien -->
-                <div class="feature-section">
-                    <h3><i class="fas fa-user-md"></i> Pour les Medecins</h3>
-                    <div class="feature-cards">
-                        <div class="feature-card">
-                            <i class="fas fa-calendar-check"></i>
-                            <h4>Agenda intelligent</h4>
-                            <p>Gérez facilement votre planning et vos rendez-vous en ligne</p>
-                        </div>
-                        <div class="feature-card">
-                            <i class="fas fa-laptop-medical"></i>
-                            <h4>Cabinet numérique</h4>
-                            <p>Gérez vos patients et leurs dossiers médicaux simplement</p>
-                        </div>
-                        <div class="feature-card">
-                            <i class="fas fa-chart-bar"></i>
-                            <h4>Suivi d'activité</h4>
-                            <p>Analysez votre activité et optimisez votre pratique</p>
-                        </div>
+                    <div class="feature-card">
+                        <i class="far fa-calendar-alt"></i>
+                        <h4>Rendez-vous en ligne</h4>
+                        <p>Prenez rendez-vous 24h/24 et recevez des rappels automatiques</p>
+                    </div>
+                    <div class="feature-card">
+                        <i class="fas fa-file-medical"></i>
+                        <h4>Suivi médical</h4>
+                        <p>Accédez à votre historique et vos documents médicaux en toute sécurité</p>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
+
+            <div class="feature-section">
+                <h3><i class="fas fa-user-md"></i> Pour les médecins</h3>
+                <div class="feature-cards">
+                    <div class="feature-card">
+                        <i class="fas fa-calendar-check"></i>
+                        <h4>Agenda intelligent</h4>
+                        <p>Gérez facilement votre planning et vos rendez-vous en ligne</p>
+                    </div>
+                    <div class="feature-card">
+                        <i class="fas fa-laptop-medical"></i>
+                        <h4>Cabinet numérique</h4>
+                        <p>Gérez vos patients et leurs dossiers médicaux simplement</p>
+                    </div>
+                    <div class="feature-card">
+                        <i class="fas fa-chart-bar"></i>
+                        <h4>Suivi d'activité</h4>
+                        <p>Analysez votre activité et optimisez votre pratique</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
