documentation sur le projet au complet et methode a implementer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-links">
             <a href="./templates/accueil.html" class="active">Accueil</a>
             <a href="./templates/medecin.html">Médecins</a>
-            <a href="./templates/rendez-vous.html">Mes rendez-vous</a>
+            <a href="./templates/rendez-vous.html">rendez-vous</a>
             <a href="./templates/profil.html">Profil</a>
         </div>
 
